# datapackage-to-datasette

./: .flake8  .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/workflows/: test.yml
datapackage_to_datasette/: __init__.py  __version__.py  cli.py  utils.py
tests/: test_utils.py
tests/fixtures/contrived-example/: datapackage.json
tests/fixtures/periodic-table/: datapackage.json
