[tool.poetry]
name = "datapackage-to-datasette"
version = "0.2.1"
description = "Import Frictionless Data Datapackages into SQLite and generate Datasette metadata"
authors = ["chris48s"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/chris48s/datapackage-to-datasette"
homepage = "https://github.com/chris48s/datapackage-to-datasette"
classifiers = [
    "Framework :: Datasette"
]

[tool.poetry.dependencies]
python = "^3.6"
deepmerge = "^1.0.1"
frictionless = {version = "^4.0.0", extras = ["sql"]}

[tool.poetry.dev-dependencies]
isort = { version = "^5.10", python = "^3.6.2" }
flake8 = "^4.0.1"
black = { version = "==22.1.0", python = "^3.6.2" }
coverage = "^6.2"

[build-system]
requires = ["poetry>=1.0.2"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
datapackage-to-datasette = 'datapackage_to_datasette.cli:main'
