[tool.poetry]
name = "datapackage-to-datasette"
version = "0.3.1"
description = "Import Frictionless Data Datapackages into SQLite and generate Datasette metadata"
authors = ["chris48s"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/chris48s/datapackage-to-datasette"
homepage = "https://github.com/chris48s/datapackage-to-datasette"
classifiers = [
    "Framework :: Datasette"
]

[tool.poetry.dependencies]
python = ">=3.8"
deepmerge = "^1.0.1"
frictionless = {version = ">=5,<6", extras = ["sql"]}

[tool.poetry.dev-dependencies]
isort = "^5.13"
flake8 = { version = "^7.1.0", python = "^3.8.1" }
black = "==24.8.0"
coverage = "^7.6"

[build-system]
requires = ["poetry>=1.0.2"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
datapackage-to-datasette = 'datapackage_to_datasette.cli:main'
