[project]
name = "datapackage-to-datasette"
version = "0.4.1"
description = "Import Frictionless Data Datapackages into SQLite and generate Datasette metadata"
authors = [{name = "chris48s"}]
license = "MIT"
readme = "README.md"
classifiers = [
    "Framework :: Datasette"
]
requires-python = ">=3.10"
dependencies = [
    "deepmerge>=1.0.1,<3.0.0",
    "frictionless[sql]>=5,<6",
]

[tool.poetry.group.dev.dependencies]
isort = "^7.0"
flake8 = "^7.1.2"
black = "==25.9.0"
coverage = "^7.6"

[project.urls]
Home = "https://github.com/chris48s/datapackage-to-datasette"
Source = "https://github.com/chris48s/datapackage-to-datasette"

[tool.poetry]
requires-poetry = ">=2.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
datapackage-to-datasette = 'datapackage_to_datasette.cli:main'
